--- a/css/global.css
+++ b/css/global.css
@@ -56,8 +56,16 @@ img {
 }
 
 main {
-   margin-top: 40px;
-   gap: 80px;
+   margin-block: 40px;
+   row-gap: 80px;
+   column-gap: 32px;
+
+   grid-template-areas:
+      "featured featured"
+      "weekly weekly"
+      "ai aside";
+
+   grid-template-columns: 2fr 1.5fr;
 }
 
 .content-tag {
